--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <hr>
     </div>
     <div class="row">
-      <div class="col-md-12 text-center"><img src="img/about.jpg" class="img-responsive"></div>
+      <div class="col-md-12 text-center"><img src="img/myprofile.jpg" class="img-responsive"></div>
       <div class="col-md-8 col-md-offset-2">
         <div class="about-text">
           <p>I'm a student of Computer Science and Engineering at Gandhi Institute for Technological Advancement, Bhubaneswar. I am a web developer and Android app developer. I love to learn and code. I am an ambivert and love to be socially active. I like attending technical seminars and workshops. Beside that I like to share my little knowledge with people.</p>
