--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
 <div id="footer">
   <div class="container text-center">
     <div class="fnav">
-      <p>Copyright, 2017 | Kamesh Kumar Singh</p><br>
+      <p> ©, 2017-2018 | iamkamesh.com</p><br>
 	  <p>
 
       </p>
