--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Kamesh Kumar Singh - Coder | Designer | Photographer</title>
+<title>Kamesh Kumar Singh - Coder | Designer | Photographer | Blogger</title>
 <meta name="description" content="">
 <meta name="author" content="">
 
@@ -66,6 +66,7 @@
           <li> <a class="page-scroll" href="#portfolio">Portfolio</a> </li>
           <li> <a class="page-scroll" href="#resume">Resume</a> </li>
           <li> <a class="page-scroll" href="#contact">Contact</a> </li>
+	  <li> <a class="page-scroll" href="https://medium.com/@kameshk61">Blogs</a> </li>
         </ul>
       </div>
     </div>
