--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <li> <a class="page-scroll" href="#portfolio">Portfolio</a> </li>
           <li> <a class="page-scroll" href="#resume">Resume</a> </li>
           <li> <a class="page-scroll" href="#contact">Contact</a> </li>
-	  <li> <a class="page-scroll" href="https://medium.com/@kameshk61">Blogs</a> </li>
+	  <li> <a class="page-scroll" href="https://medium.com/@kameshk61" target="_blank">Blogs</a> </li>
         </ul>
       </div>
     </div>
