--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="about-text">
           <p>I'm a student of Computer Science and Engineering at Gandhi Institute for Technological Advancement, Bhubaneswar. I am a web developer and Android app developer. I love to learn and code. I am an ambivert and love to be socially active. I like attending technical seminars and workshops. Beside that I like to share my little knowledge with people.</p>
           <p></p>
-          <p class="text-center"><a class="btn btn-primary" href="#"><i class="fa fa-download"></i> Download Resume</a></p>
+          <p class="text-center"><a class="btn btn-primary" href="resume.pdf"><i class="fa fa-download"></i> Download Resume</a></p>
         </div>
       </div>
     </div>
