--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
           <li> <a class="page-scroll" href="#portfolio">Portfolio</a> </li>
           <li> <a class="page-scroll" href="#resume">Resume</a> </li>
           <li> <a class="page-scroll" href="#contact">Contact</a> </li>
+	  <li> <a class="page-scroll" href="https://www.yourquote.in/kamesh-kumar-singh-bml2/quotes">Quotes</a> </li>
 	  <li> <a class="page-scroll" href="https://medium.com/@kameshk61" target="_blank">Blogs</a> </li>
         </ul>
       </div>
